wip: add a single square with a border

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Etch-a-SketchPad</title>
 </head>
 <body>
-    <div id="container">
-
-    </div>
+    <div id="container"></div>
 </body>
 </html>
