wip: add a simple button on the top

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch-a-SketchPad</title>
 </head>
 <body>
+    <button id="gridSizeChangeBtn">Change Grid Size</button>
     <div id="container"></div>
 </body>
 </html>
